<?xml version="1.0"?>
<package format="2">
  <name>free_gait_action_loader</name>
  <version>0.1.1</version>
  <description>Dynamic loading of Free Gait action.</description>
  <maintainer email="pfankhauser@ethz.ch">Peter Fankhauser</maintainer>
  <author email="pfankhauser@ethz.ch">Peter Fankhauser</author>
  <license>BSD</license>
  <url type="website">https://bitbucket.org/ethz-asl-lr/free_gait</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>free_gait_python</depend>
  <depend>free_gait_msgs</depend>

</package>
