<?xml version="1.0"?>
<package format="2">
  <name>free_gait_core</name>
  <version>0.0.1</version>
  <description>Free gait for legged robots.</description>
  <maintainer email="pfankhauser@ethz.ch">Peter Fankhauser</maintainer>
  <license>BSD</license>
  <url type="website">https://bitbucket.org/ethz-asl-lr/free_gait</url>
  <url type="bugtracker">https://bitbucket.org/ethz-asl-lr/free_gait/issues</url>
  <author email="pfankhauser@ethz.ch">Peter Fankhauser</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>quadruped_model</depend>
  <depend>numopt_quadprog</depend>
  <depend>curves</depend>
  <depend>grid_map_core</depend>
  <depend>loco</depend>
  <depend>robot_utils</depend>
  <depend>message_logger</depend>
</package>
