<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>free_gait_core</name>
  <version>0.4.0</version>
  <description>Free Gait for architecture for the control of legged robots.</description>
  <maintainer email="pfankhauser@anybotics.com">Peter Fankhauser</maintainer>
  <author email="pfankhauser@anybotics.com">Peter Fankhauser</author>
  <license>BSD</license>
  <url type="website">https://github.com/leggedrobotics/free_gait</url>
  <url type="bugtracker">https://github.com/leggedrobotics/free_gait/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>eigen</depend>
  <depend>quadruped_model</depend>
  <depend>numopt_common</depend>
  <depend>numopt_quadprog</depend>
  <depend>numopt_sqp</depend>
  <depend>curves</depend>
  <depend>grid_map_core</depend>
  <depend>robot_utils</depend>
  <depend>std_utils</depend>
  <depend>message_logger</depend>
  <depend>loco</depend>
</package>
