<?xml version="1.0"?>
<package format="2">
  <name>free_gait_marker</name>
  <version>0.1.0</version>
  <description>Interactive Rviz markers for </description>
  <maintainer email="pfankhauser@ethz.ch">Peter Fankhauser</maintainer>
  <license>BSD</license>
  <url type="website">https://bitbucket.org/ethz-asl-lr/starleth_user_interface</url>
  <author email="pfankhauser@ethz.ch">Peter Fankhauser</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>interactive_markers</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>free_gait_msgs</depend>
  <depend>curves</depend>
  <depend>eigen</depend>
  <depend>multi_dof_joint_trajectory_rviz_plugins</depend>
  
</package>
