<?xml version="1.0"?>
<package format="2">
  <name>free_gait_python</name>
  <version>0.1.0</version>
  <description>A collection of python scripts for the Free Gait.</description>
  <maintainer email="pfankhauser@ethz.ch">Peter Fankhauser</maintainer>
  <author email="pfankhauser@ethz.ch">Peter Fankhauser</author>
  <license>BSD</license>
  <url type="website">https://bitbucket.org/ethz-asl-lr/loco_free_gait</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>quadruped_msgs</depend>

</package>
