<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>free_gait_python</name>
  <version>0.2.0</version>
  <description>A collection of python scripts for the Free Gait.</description>
  <maintainer email="pfankhauser@ethz.ch">Peter Fankhauser</maintainer>
  <author email="pfankhauser@ethz.ch">Peter Fankhauser</author>
  <license>BSD</license>
  <url type="website">https://github.com/leggedrobotics/free_gait</url>
  <url type="bugtracker">https://github.com/leggedrobotics/free_gait/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>free_gait_msgs</depend>
</package>
