<?xml version="1.0"?>
<package format="2">
  <name>free_gait_ros</name>
  <version>0.1.0</version>
  <description>ROS wrapper for free gait.</description>
  <maintainer email="pfankhauser@ethz.ch">Péter Fankhauser</maintainer>
  <license>BSD</license>
  <url type="website">https://bitbucket.org/ethz-asl-lr/free_gait</url>
  <url type="bugtracker">https://bitbucket.org/ethz-asl-lr/free_gait/issues</url>
  <author email="pfankhauser@ethz.ch">Péter Fankhauser</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>free_gait_msgs</depend>
  <depend>free_gait_core</depend>
  <depend>curves_ros</depend>
  <depend>pluginlib</depend>
  <depend>robot_state_publisher</depend>
  <depend>kdl_parser</depend>
</package>
