<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>free_gait_ros</name>
  <version>0.2.0</version>
  <description>ROS wrapper for free gait.</description>
  <maintainer email="pfankhauser@ethz.ch">Peter Fankhauser</maintainer>
  <author email="pfankhauser@ethz.ch">Peter Fankhauser</author>
  <license>BSD</license>
  <url type="website">https://github.com/leggedrobotics/free_gait</url>
  <url type="bugtracker">https://github.com/leggedrobotics/free_gait/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>free_gait_msgs</depend>
  <depend>free_gait_core</depend>
  <depend>curves_ros</depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_ros</depend>
  <depend>pluginlib</depend>
  <depend>robot_state_publisher</depend>
  <depend>kdl_parser</depend>
  <depend>eigen</depend>
</package>
