<package>
  <name>free_gait_rviz_plugin</name>
  <version>0.1.0</version>
  <description>RViz plugin to preview Free Gait actions.</description>
  <maintainer email="pfankhauser@ethz.ch">Peter Fankhauser</maintainer>
  <license>BSD</license>
  <author email="pfankhauser@ethz.ch">Peter Fankhauser</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>free_gait_core</build_depend>
  <build_depend>free_gait_ros</build_depend>
  <build_depend>free_gait_msgs</build_depend>
  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>free_gait_core</run_depend>
  <run_depend>free_gait_ros</run_depend>
  <run_depend>free_gait_msgs</run_depend>
  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
